# python-tkextrafont

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HOWTOBUILD.txt  LICENSE  LICENSE.md  Makefile  README.md  build.sh  clean.sh  cross-makefile  license.terms  ms-build.bat  ms-makefile  peru.yaml  pyproject.toml  setup.py  u2d.bat  unix-makefile  vcpkg-configuration.json  vcpkg.json
.github/workflows/: pypi.yml  wheels.yml
ci/: post_process_manylinux.py
docs/: doc.txt
example/: LICENSE.roboto.md  example.py
src/: extrafont.c  extrafont.tcl  pkgIndex.tcl  pkgIndex.tcl.in
tests/: README.overhaul  README.txt  all.tcl  extrafont-basic.test  helper  test_tkextrafont.py
tkextrafont/: __init__.py  extrafont.tcl  fontnameinfo.tcl  futmp.tcl  pkgIndex.tcl
